--- a/app/assets/views/blocks/home-catalog.pug
+++ b/app/assets/views/blocks/home-catalog.pug
@@ -45,9 +45,9 @@
                     img.product__img(src="img/content/home-catalog/product_2.png" width="213" height="213" alt="Name product")
 
                     ul.product__colors-list
-                        li.product__colors-item(style="background:#99b6ee;")
-                        li.product__colors-item(style="background:#ffcbdb;")
-                        li.product__colors-item(style="background:#717171;")
+                        li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/pink.jpg');")
+                        li.product__colors-item(style="background-image: url('img/content/product-colors/black.jpg');")
+                        li.product__colors-item(style="background-image: url('img/content/product-colors/blue.jpg');")
 
                 .product__info
                     .product__title KidGram Watch
@@ -62,8 +62,9 @@
                     img.product__img(src="img/content/home-catalog/product_3.png" width="213" height="213" alt="Name product")
 
                     ul.product__colors-list
-                        li.product__colors-item(style="background:#99b6ee;")
-                        li.product__colors-item(style="background:#717171;")
+                        li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/blue.jpg');")
+                        li.product__colors-item(style="background-image: url('img/content/product-colors/green.jpg');")
+                        li.product__colors-item(style="background-image: url('img/content/product-colors/red.jpg');")
 
                 .product__info
                     .product__title 4G Techo
