--- a/app/assets/views/catalog.pug
+++ b/app/assets/views/catalog.pug
@@ -30,7 +30,7 @@ block content
                         img.product__img(src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product")
 
                         ul.product__colors-list
-                            li.product__colors-item(style="background-image: url('img/content/product-colors/black.jpg');")
+                            li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
                             li.product__colors-item(style="background-image: url('img/content/product-colors/pink.jpg');")
                             li.product__colors-item(style="background-image: url('img/content/product-colors/blue.jpg');")
 
@@ -52,7 +52,7 @@ block content
                         img.product__img(src="img/content/catalog/product_1.png" width="213" height="213" alt="Name product")
 
                         ul.product__colors-list
-                            li.product__colors-item(style="background-image: url('img/content/product-colors/yellow.jpg');")
+                            li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/yellow.jpg');")
                             li.product__colors-item(style="background-image: url('img/content/product-colors/green.jpg');")
                             li.product__colors-item(style="background-image: url('img/content/product-colors/red.jpg');")
 
@@ -77,7 +77,7 @@ block content
                         img.product__img(src="img/content/catalog/product_2.png" width="213" height="213" alt="Name product")
 
                         ul.product__colors-list
-                            li.product__colors-item(style="background-image: url('img/content/product-colors/black.jpg');")
+                            li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
                             li.product__colors-item(style="background-image: url('img/content/product-colors/blue.jpg');")
 
                     .product__info
@@ -102,7 +102,7 @@ block content
                         img.product__img(src="img/content/catalog/product_3.png" width="213" height="213" alt="Name product")
 
                         ul.product__colors-list
-                            li.product__colors-item(style="background-image: url('img/content/product-colors/black.jpg');")
+                            li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
                             li.product__colors-item(style="background-image: url('img/content/product-colors/purple.jpg');")
 
                     .product__info
@@ -127,7 +127,7 @@ block content
                         img.product__img(src="img/content/catalog/product_4.png" width="213" height="213" alt="Name product")
 
                         ul.product__colors-list
-                            li.product__colors-item(style="background-image: url('img/content/product-colors/black.jpg');")
+                            li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
                             li.product__colors-item(style="background-image: url('img/content/product-colors/yellow.jpg');")
 
                     .product__info
@@ -151,7 +151,7 @@ block content
                         img.product__img(src="img/content/catalog/product_5.png" width="213" height="213" alt="Name product")
 
                         ul.product__colors-list
-                            li.product__colors-item(style="background-image: url('img/content/product-colors/black.jpg');")
+                            li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
                             li.product__colors-item(style="background-image: url('img/content/product-colors/yellow.jpg');")
                             li.product__colors-item(style="background-image: url('img/content/product-colors/red.jpg');")
 
@@ -192,7 +192,7 @@ block content
                         img.product__img(src="img/content/catalog/product_7.png" width="213" height="213" alt="Name product")
 
                         ul.product__colors-list
-                            li.product__colors-item(style="background-image: url('img/content/product-colors/black.jpg');")
+                            li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
                             li.product__colors-item(style="background-image: url('img/content/product-colors/green.jpg');")
                             li.product__colors-item(style="background-image: url('img/content/product-colors/purple-transparent.jpg');")
 
@@ -214,7 +214,7 @@ block content
                         img.product__img(src="img/content/catalog/product_8.webp" width="213" height="213" alt="Name product")
 
                         ul.product__colors-list
-                            li.product__colors-item(style="background-image: url('img/content/product-colors/pink-black.jpg');")
+                            li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/pink-black.jpg');")
                             li.product__colors-item(style="background-image: url('img/content/product-colors/blue-black.jpg');")
 
                     .product__info
