--- a/app/styles/blocks/home-catalog.sass
+++ b/app/styles/blocks/home-catalog.sass
@@ -173,12 +173,18 @@
             z-index: 3
 
         &-item
+            cursor: pointer
+            outline: 2px solid transparent
+            outline-offset: 4px
             border-radius: 50%
             size: 12px @xl 16px
             margin-right: 12px @xl 16px
             background-repeat: no-repeat
             background-position: center
             background-size: cover
+
+            &--active
+                outline-color: #7373f5
 
             &:last-child
                 margin: 0
