--- a/app/styles/blocks/catalog.sass
+++ b/app/styles/blocks/catalog.sass
@@ -5,7 +5,7 @@
         margin: * -6px -24px @md * -12px -48px @xl * -16px -64px
 
     .product
-        width: 100% @sm 50% @md 33.3% @xl 25%
+        width: 50% @md 33.3% @lg 25% @xl 20%
 
         &__img--wrap
             flex: 0
@@ -15,3 +15,10 @@
             display: flex
             flex-direction: column
             flex: 1
+
+        &__btn
+            width: 100%
+
+        &__price
+            .price__current
+                text: 18px
