--- a/app/assets/views/catalog.pug
+++ b/app/assets/views/catalog.pug
@@ -41,8 +41,7 @@ block content
                             .price__current 7990 р
 
                         .product__nav
-                            .btn.btn--border-accent.product__btn Подробнее 
-                            button.btn.btn--reset.btn--cart.product__cart(aria-label="Add cart")
+                            button.btn.btn--border-accent.product__btn(aria-label="Add cart") Добавить в корзину
 
             .product
                 .product__body
@@ -63,8 +62,7 @@ block content
                             .price__current 6990 р
 
                         .product__nav
-                            .btn.btn--border-accent.product__btn Подробнее 
-                            button.btn.btn--reset.btn--cart.product__cart(aria-label="Add cart")
+                            button.btn.btn--border-accent.product__btn(aria-label="Add cart") Добавить в корзину
 
             .product
                 .product__body
@@ -87,8 +85,7 @@ block content
                             .price__current 7490 р
 
                         .product__nav
-                            .btn.btn--border-accent.product__btn Подробнее 
-                            button.btn.btn--reset.btn--cart.product__cart(aria-label="Add cart")
+                            button.btn.btn--border-accent.product__btn(aria-label="Add cart") Добавить в корзину
 
             .product
                 .product__body
@@ -112,8 +109,7 @@ block content
                             .price__current 8990 р
 
                         .product__nav
-                            .btn.btn--border-accent.product__btn Подробнее 
-                            button.btn.btn--reset.btn--cart.product__cart(aria-label="Add cart")
+                            button.btn.btn--border-accent.product__btn(aria-label="Add cart") Добавить в корзину
 
             .product
                 .product__body
@@ -137,8 +133,7 @@ block content
                             .price__current 5990 р
 
                         .product__nav
-                            .btn.btn--border-accent.product__btn Подробнее 
-                            button.btn.btn--reset.btn--cart.product__cart(aria-label="Add cart")
+                            button.btn.btn--border-accent.product__btn(aria-label="Add cart") Добавить в корзину
 
             .product
                 .product__body
@@ -162,8 +157,7 @@ block content
                             .price__current 7990 р
 
                         .product__nav
-                            .btn.btn--border-accent.product__btn Подробнее 
-                            button.btn.btn--reset.btn--cart.product__cart(aria-label="Add cart")
+                            button.btn.btn--border-accent.product__btn(aria-label="Add cart") Добавить в корзину
 
             .product
                 .product__body
@@ -181,8 +175,7 @@ block content
                         .product__desc Водонепроницаемые 4G часы-телефон с GPS/Wi-Fi-трекингом, MP3-плеером, Алисой от Яндекса и видеозвонками
                 
                         .product__nav
-                            .btn.btn--border-accent.product__btn Подробнее 
-                            button.btn.product__preorder(data-modal="modal-preorder" aria-label="Open modal") Предзаказ
+                            button.btn.btn--border-accent.product__btn(data-modal="modal-preorder" aria-label="Open modal") Предзаказ
 
             .product
                 .product__body
@@ -203,8 +196,7 @@ block content
                             .price__current 3990 р
 
                         .product__nav
-                            .btn.btn--border-accent.product__btn Подробнее
-                            button.btn.product__preorder(data-modal="modal-preorder" aria-label="Open modal") Предзаказ
+                            button.btn.btn--border-accent.product__btn(data-modal="modal-preorder" aria-label="Open modal") Предзаказ
 
             .product
                 .product__body
@@ -224,6 +216,5 @@ block content
                             .price__current 3990 р
 
                         .product__nav
-                            .btn.btn--border-accent.product__btn Подробнее 
-                            button.btn.btn--reset.btn--cart.product__cart(aria-label="Add cart")
+                            button.btn.btn--border-accent.product__btn(aria-label="Add cart") Добавить в корзину
 
