--- a/app/styles/blocks/home-catalog.sass
+++ b/app/styles/blocks/home-catalog.sass
@@ -214,20 +214,20 @@
         padding-top: 12px
 
     &__btn
-        text: 14px
+        text: 11px @sm 14px
         min-height: 32px
         padding: 0 8px 0 16px
         z-index: 3
 
         &::after
             content: ''
-            size: 24px
-            min-width: 24px
+            size: 20px @sm 24px
+            min-width: 20px @sm 24px
             background-image: resolve("icons/chevron-right-accent.svg") 
             background-repeat: no-repeat 
             background-position: center 
             background-size: 14px @xl 18px
-            margin-left: 4px @xl 8px
+            margin-left: 2px @sm 4px @xl 8px
             transition: .2s
 
         &:hover
