--- a/app/styles/blocks/home-catalog.sass
+++ b/app/styles/blocks/home-catalog.sass
@@ -212,9 +212,10 @@
         gap: 12px 24px
         margin-top: auto
         padding-top: 12px
+        margin: * -8px @xl * -12px
 
     &__btn
-        text: 11px @sm 14px
+        text: 14px
         min-height: 32px
         padding: 0 8px 0 16px
         z-index: 3
