--- a/app/styles/blocks/catalog.sass
+++ b/app/styles/blocks/catalog.sass
@@ -5,7 +5,7 @@
         margin: * -6px -24px @md * -12px -48px @xl * -16px -64px
 
     .product
-        width: 50% @md 33.3% @lg 25% @xl 20%
+        width: 50% @md 33.3% @lg 25%
 
         &__img--wrap
             flex: 0
@@ -22,3 +22,9 @@
         &__price
             .price__current
                 text: 18px
+
+@media (min-width: 1400px)
+    .catalog
+        .product
+            width: 20%
+    
