product card page

--- a/app/assets/views/blocks/home-watch.pug
+++ b/app/assets/views/blocks/home-watch.pug
@@ -1,6 +1,6 @@
 .home-watch
-    .home-watch__caption Смарт-часы для
-    .home-watch__title Жизни <span>и спорта.</span>
+    //- .home-watch__caption Смарт-часы для
+    //- .home-watch__title Жизни <span>и спорта.</span>
 
     .home-watch__img--wrap
         picture
