--- a/app/styles/blocks/footer.sass
+++ b/app/styles/blocks/footer.sass
@@ -1,4 +1,6 @@
 .footer
+    position: relative
+    z-index: 2
     background: #f5f5f7
     padding: 16px 0 @sm 0
     transition: @lg .4s, opacity .4s, -webkit-transform .4s
